--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -23,7 +23,7 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \addversione{0.0.1}{16/01/2022}{Elia Scandaletti}{Giovanni Cocco}{Correzione indice di Gulpease.}
 \addversione{0.0.2}{16/01/2022}{Giovanni Cocco}{Elia Scandaletti}{Migliorata la leggibilità.}
 \addversione{0.0.3}{04/02/2022}{Giovanni Cocco}{Elia Scandaletti}{Stesura iniziale sezione software.}
-\addversione{0.0.4}{21/02/2022}{Giovanni Cocco}{Elia Scandaletti}{Aggiunta dashboard al docuemento.}
+\addversione{0.0.4}{21/02/2022}{Giovanni Cocco}{Elia Scandaletti}{Aggiunta dashboard al documento.}
 \addversione{2.0.0}{23/03/2022}{Elia Scandaletti}{Giovanni Cocco}{Rifacimento del documento.}
 \addversione{2.1.0}{30/03/2022}{Giovanni Cocco}{Elia Scandalett}{Aggiornamento per ciclo 1.}
 \addversione{2.2.0}{07/04/2022}{Matteo Galvagni}{Giovanni Cocco}{Aggiornamento per ciclo 2.}
@@ -53,8 +53,7 @@ I documenti che superano solo la soglia di accettabilità hanno invece registrat
 
 \paragraph{Qualità di processo}
 Negli ultimi due cicli di sprint è stato sovrastimato il costo in ore dei ruoli di amministratore, analista e progettista, mentre è stato sottostimato il costo in ore dei ruoli di responsabile e programmatore. \\
-A causa dell'alto costo orario del responsabile, queste stime errate hanno portato nell'ultimo sprint ad un costo superiore a quello preventivato. \\
-I valori sono ancora accettabili, ma è auspicabile che vengano prese iniziative per meglio stimare le ore necessarie al fine di evitare che la situazione si ripeta o che peggiori ulteriormente.
+A causa dell'alto costo orario del responsabile, queste stime errate hanno portato nell'ultimo sprint ad un costo superiore a quello preventivato, ma i costi rimangono nei parametri accettabili. \\
 
 \section{Qualità di prodotto}
 
