--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -28,7 +28,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{2.0.1}{17/04/2022}{Elia Scandaletti}{Raffaele Oliviero}{Aggiornamento processo fornitura.}
 \addversione{2.0.2}{18/04/2022}{Elia Scandaletti}{Giovanni Cocco}{Correzione grammatica.}
 \addversione{2.0.3}{07/05/2022}{Matteo Galvagni}{Elia Scandaletti}{Correzione dopo revisione PB.}
-\addversione{2.0.4}{08/05/2022}{Andrea Volpe}{?}{Aggiornamento verbali e processi organizzativi.}
+\addversione{2.1.0}{08/05/2022}{Andrea Volpe}{Raffaele Oliviero}{Aggiornamento verbali e processi organizzativi.}
 
 
 
