--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -37,7 +37,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{2.10.0}{28/04/2022}{Andrea Volpe}{Raffaele Oliviero}{Aggiunto preventivo per ciclo 6.}
 \addversione{2.11.0}{04/05/2022}{Andrea Volpe}{Alberto Nicoletti}{Chiusura ciclo 6.}
 \addversione{2.11.1}{07/05/2022}{Matteo Galvagni}{Elia Scandaletti}{Correzione dopo revisione PB.}
-\addversione{2.12.0}{08/05/2022}{Elia Scandaletti}{}{Aggiunto preventivo per ciclo 7.}
+\addversione{2.12.0}{08/05/2022}{Elia Scandaletti}{Andrea Volpe}{Aggiunto preventivo per ciclo 7.}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
