--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -462,7 +462,7 @@ I resoconti dovranno essere preparati dai singoli membri prima di ogni esposizio
 Ogni incontro dovrà produrre un aggiornamento delle milestones (e diagramma di Gantt).\\
 La pianificazione dei prossimi sprint consisterà nel dividere il lavoro in item e decidere il numero di membri adatto per item.\\
 Gli item pianificati non potranno subire modifiche o cancellazioni durante il ciclo di sprint e dovranno essere portati a termine
-entro il ciclo successivo. In caso emergessero importati contestazioni o criticità il responsabile deciderà come agire.\\
+entro il ciclo successivo. In caso emergessero importanti contestazioni o criticità il responsabile deciderà come agire.\\
 Ogni ciclo di Scrum prevederà un nuovo responsabile, scelto per cognome in ordine alfabetico.\\
 Il responsabile dovrà assegnare le persone agli item considerando la rotazione dei ruoli.\\
 Il responsabile dovrà poi creare le issues su GitHub relative agli item e assegnarvici i membri.\\
