--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -29,6 +29,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{2.0.2}{18/04/2022}{Elia Scandaletti}{Giovanni Cocco}{Correzione grammatica.}
 \addversione{2.0.3}{07/05/2022}{Matteo Galvagni}{Elia Scandaletti}{Correzione dopo revisione PB.}
 \addversione{2.1.0}{08/05/2022}{Andrea Volpe}{Raffaele Oliviero}{Aggiornamento verbali e processi organizzativi.}
+\addversione{2.1.1}{10/05/2022}{Elia Scandaletti}{Andrea Volpe}{Correzione processo fornitura dopo revisione PB.}
 
 
 
@@ -53,7 +54,7 @@ Il processo di fornitura determina le attività e le risorse che servono per ges
 Durante tutto il progetto verrà usata un unica repository pubblica. La parte di repository che interessa al proponente ed al committente è la cartella \texttt{public} definita come parte pubblica della repository. Questa cartella contiene un file read-me in cui viene spiegato ed elencato il contenuto della parte pubblica con un avviso che chiede di restarne all'interno, ignorando il resto della repository, detta parte privata.\\\\
 La parte pubblica contiene i documenti necessari alle revisioni di periodo con il committente.\\
 La struttura della cartella \texttt{public} rispecchia la struttura della cartella \texttt{docs}. Fanno eccezione i verbali che saranno tutti all'interno delle cartelle \texttt{esterni/verbali} e \texttt{interni/verbali} e non avranno ciascuno la propria cartella.\\
-Ogni documento che prevede versionamento deve indicare la versione nel nome del file stesso nel seguente modo: \texttt{$<$NomeFile$>$\_v$<$versione$>$.pdf}. I documenti con le versioni vecchie andranno mantenuti. \\
+Ogni documento che prevede versionamento deve indicare la versione nel nome del file stesso nel seguente modo: \texttt{$<$NomeFile$>$\_v$<$versione$>$.pdf}. I documenti con le versioni vecchie andranno rimossi. \\
 Ogni modifica alla parte pubblica deve essere approvata dal responsabile, cui spetta accettare le pull request della parte pubblica.
 \subsubsection{Contatti con proponente e committente}
 
@@ -345,7 +346,7 @@ Chi redige il verbale ha 24 ore per completare il lavoro. Chi approva il verbale
 
 Nel secondo caso, il redattore avrà ulteriori 24 ore per adeguarsi alle indicazioni.
 \subparagraph{Dettagli}\label{documentazione-documenti-verbali-dettagli}
-In caso di verbale di chiusura di ciclo di sprint, la parte di \textit{svolgimento} dovà essere strutturata nel seguente modo:
+In caso di verbale di chiusura di ciclo di sprint, la parte di \textit{svolgimento} dovrà essere strutturata nel seguente modo:
 \begin{itemize}
 	\item Resoconto del ciclo di sprint precedente
 	\item Criticità del ciclo di sprint precedente
