Analisi narrativa pdp Correzione grammatica + verifica

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -37,7 +37,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{2.10.0}{28/04/2022}{Andrea Volpe}{Raffaele Oliviero}{Aggiunto preventivo per ciclo 6.}
 \addversione{2.11.0}{04/05/2022}{Andrea Volpe}{Alberto Nicoletti}{Chiusura ciclo 6.}
 \addversione{2.11.1}{07/05/2022}{Matteo Galvagni}{Elia Scandaletti}{Correzione dopo revisione PB.}
-\addversione{2.12.0}{07/05/2022}{Alberto Nicoletti}{}{Aggiunta analisi narrativa dello stato d'avanzamento.}
+\addversione{2.12.0}{07/05/2022}{Alberto Nicoletti}{Elia Scandaletti}{Aggiunta analisi narrativa dello stato d'avanzamento.}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -144,9 +144,9 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \textbf{Data di fine prevista}: 12 Maggio 2022
 
 \subsection{Stato d'avanzamento corrente}
-La data di consegna è postiticipata di due settimane rispetto al preventivo iniziale. Non si prevedono ulteriori posticipi. In quella data - o prima - verrà richiesto il colloquio CA.
-\\Con la richesta di colloquio CA si prevede di venire a conoscenza dei contenuti della relativa presentazione. Non appena saranno resi noti si inizierà la preparazione per il colloquio.
-\\Il prodotto software è completo in tutte le sue parti. E' ora in corso la fase di validazione con controllo di soddisfazione dei requisiti.
+La data di consegna è posticipata di due settimane rispetto al preventivo iniziale. Non si prevedono ulteriori posticipi. In quella data - o prima - verrà richiesto il colloquio CA.
+\\Con la richiesta di colloquio CA si prevede di venire a conoscenza dei contenuti della relativa presentazione. Non appena saranno resi noti si inizierà la preparazione per il colloquio.
+\\Il prodotto software è completo in tutte le sue parti. \`E ora in corso la fase di validazione con controllo di soddisfazione dei requisiti.
 \\I manuali utente sono completi. Il manuale sviluppatore è in conclusione.
 \\Sono in atto aggiornamenti alla documentazione, in linea con la valutazione PB del prof. Vardanega.
 \\La gestione di progetto procede senza intralci. Il WoW adottato a seguito delle problematiche del primo periodo ha dato i suoi frutti.
