Correzioni manuale acquirente

--- a/docs/esterni/manuale_acquirente/manuale_acquirente.tex
+++ b/docs/esterni/manuale_acquirente/manuale_acquirente.tex
@@ -13,8 +13,8 @@
 \setdescrizione{
 Manuale acquirente.
 }
-\addversione{0.1.0}{13/04/2022}{Federico Marchi}{Redazione}{Stesura iniziale}
-\addversione{1.0.0}{07/05/2022}{Federico Marchi}{Redazione}{Stesura finale}
+\addversione{0.1.0}{13/04/2022}{Federico Marchi}{Matteo Galvagni}{Stesura iniziale}
+\addversione{1.0.0}{07/05/2022}{Federico Marchi}{Elia Scandaletti}{Stesura finale}
 
 \begin{document}
 
@@ -34,7 +34,7 @@ Per poter effettuare il pagamento sarà necessario l'utilizzo di un wallet Metam
 \subsubsection{Configurazione}
 \label{sec:network}
 Il wallet Metamask imposta il network di Ethereum come rete predefinita, Shop Chain invece utilizza il network di Polygon. Se il network Polygon non è gia stato inserito nel proprio wallet Metamask, procedere con la lettura del seguente paragrafo.
-\\Per l'inserimento e la configurazione della corretta rete nel proprio wallet Metamask è necessario recarsi sulla sezione "Networks" e selezionare l'opzione "Add Network". Successivamente inserire i seguenti dati:
+\\Per l'inserimento e la configurazione della corretta rete nel proprio wallet Metamask è necessario recarsi sulla sezione ``Networks" e selezionare l'opzione ``Add Network". Successivamente inserire i seguenti dati:
 \begin{itemize}
 \item Network Name: \textbf{Matic Mainnet};
 \item New RPC Url: \textbf{https://rpc-mainnet.maticvigil.com/};
@@ -47,7 +47,7 @@ Una volta inseriti i dati e aggiunto il network, ricordare di selezionarlo prima
 \subsubsection{Collegamento a Shop Chain}
 Per poter eseguire il pagamento è necessario collegare il proprio wallet Metamask a Shop Chain. Una volta reindirizzati sulla landing page di Shop Chain, se non si ha già collegato in precedenza il proprio wallet:
 \begin {itemize}
-\item selezionare "Connect Wallet" all'apertura del pop-up (Fig. 1);
+\item selezionare ``Connect Wallet" all'apertura del pop-up (Fig. 1);
 \item approvare il collegamento direttamente dall'estensione Metamask.
 \end{itemize}
 
@@ -68,9 +68,9 @@ Per effettuare il pagamento sarà necessario detenere nel proprio wallet Metamas
 \item \href{https://app.sushi.com/}{SushiSwap};
 \item \href{https://polygon.curve.fi/}{Curve}.
 \end{itemize}
-Una volta che si viene reindirizzati alla landing page e che si ha verificato di possedere una sufficiente quantità di MATIC si può procedere col pagamento. É possibile verificare prima del pagamento l'ammontare in dollari e l'address del venditore (Fig. 2). Infine per concludere il pagamento:
+Una volta che si viene reindirizzati alla landing page e che si ha verificato di possedere una sufficiente quantità di MATIC si può procedere col pagamento. \`E possibile verificare prima del pagamento l'ammontare in dollari e l'address del venditore (Fig. 2). Infine per concludere il pagamento:
 \begin{itemize}
-\item selezionare "Confirm" (Fig. 2);
+\item selezionare ``Confirm" (Fig. 2);
 \item confermare la transazione su Metamask.
 \end{itemize}
 \mbox{}\\
@@ -86,7 +86,7 @@ Dovrà essere pagata anche un piccola somma per coprire i costi di transazione s
 \newpage
 \section{Visualizzazione e gestione acquisti}
 La web app di Shop Chain permette di visualizzare tutte le transazioni d'acquisto eseguite da un determinato wallet.\\
-Per poter visualizzare tutti gli acquisti recarsi dunque nella sezione "Outgoing" posta nel menù in alto a destra (Fig. 3). In questa sezione è possibile visualizzare l'insieme di pagamenti effettuati con Shop Chain, il prezzo di ciascuno, la data d'acquisto e lo stato attuale della transazione.\\
+Per poter visualizzare tutti gli acquisti recarsi dunque nella sezione ``Outgoing" posta nel menù in alto a destra (Fig. 3). In questa sezione è possibile visualizzare l'insieme di pagamenti effettuati con Shop Chain, il prezzo di ciascuno, la data d'acquisto e lo stato attuale della transazione.\\
 \FloatBarrier
 \begin{figure}[!h]
 \centering
@@ -113,7 +113,7 @@ Selezionando una transazione dalla lista è possibile visualizzarne i dettagli. 
   \end{itemize}
 \end{itemize}
 \subsection{Gestione acquisti}
-Dopo 14 giorni dalla data di acquisto, se i fondi non sono stati sbloccati dall'acquirente attraverso la scannerizzazione del codice QR, avverrà il rimborso in DAI dell'esatto importo pagato. Nel caso in cui dopo 14 giorni l'acquirente non ha ancora ricevuto né il pacco né il rimborso, potrà annullare il pagamento manualmente selezionando l'opzione "Refund transaction" (Fig. 4 riquadro 2) e dunque ricevere il rimborso.\\
+Dopo 14 giorni dalla data di acquisto, se i fondi non sono stati sbloccati dall'acquirente attraverso la scannerizzazione del codice QR, avverrà il rimborso in DAI dell'esatto importo pagato. Nel caso in cui dopo 14 giorni l'acquirente non ha ancora ricevuto né il pacco né il rimborso, potrà annullare il pagamento manualmente selezionando l'opzione ``Refund transaction" (Fig. 4 riquadro 2) e dunque ricevere il rimborso.\\
 \FloatBarrier
 \begin{figure}[!h]
 \centering
@@ -143,7 +143,7 @@ Prima di procedere con la conferma dell'ordine controllare di:
 \end{itemize}
 Una volta reindirizzati sulla landing page per la conferma dell'acquisto è possibile controllare i dati dell'ordine. Infine procedere come segue:
 \begin{itemize}
-\item selezionare "Confirm" (Fig. 4);
+\item selezionare ``Confirm" (Fig. 5);
 \item confermare la transazione di conferma su Metamask.
 \end{itemize}
 \FloatBarrier
@@ -154,7 +154,7 @@ Una volta reindirizzati sulla landing page per la conferma dell'acquisto è poss
 \end{figure}
 \FloatBarrier
 \mbox{}\\
-Terminata la procedura i fondi saranno resi disponibili al venditore, lo stato dell'ordine diventa "Confirmed" e dunque il processo di vendita si è concluso correttamente.
+Terminata la procedura i fondi saranno resi disponibili al venditore, lo stato dell'ordine diventa ``Confirmed" e dunque il processo di vendita si è concluso correttamente.
 \\ \\
 Grazie per aver utilizzato Shop Chain!
 
