Correzioni manuale e-commerce

--- a/docs/esterni/manuale_e-commerce/manuale_e-commerce.tex
+++ b/docs/esterni/manuale_e-commerce/manuale_e-commerce.tex
@@ -14,8 +14,8 @@
 \setdescrizione{
 Manuale e-commerce.
 }
-\addversione{0.1.0}{13/04/2022}{Federico Marchi}{Redazione}{Stesura iniziale}
-\addversione{1.0.0}{07/05/2022}{Federico Marchi}{Redazione}{Stesura finale}
+\addversione{0.1.0}{13/04/2022}{Federico Marchi}{Matteo Galvagni}{Stesura iniziale}
+\addversione{1.0.0}{07/05/2022}{Federico Marchi}{Elia Scandaletti}{Stesura finale}
 \begin{document}
 
 \makefrontpage
@@ -33,7 +33,7 @@ Attraverso l'utilizzo della blockchain \textit{Polygon}, Shop Chain fornisce un 
 Per poter usufruire a pieno del nostro servizio sarà necessario l'utilizzo di un wallet Metamask. Visitare \href{https://www.metamask.io}{metamask.io} per maggiori informazioni.
 \subsubsection{Configurazione}
 Il wallet Metamask imposta il network di Ethereum come rete predefinita, Shop Chain invece utilizza il network di Polygon. Se il network Polygon non è gia stato inserito nel proprio wallet Metamask, procedere con la lettura del seguente paragrafo.
-\\Per l'inserimento e la configurazione della corretta rete nel proprio wallet Metamask è necessario recarsi sulla sezione "Networks" e selezionare l'opzione "Add Network". Successivamente inserire i seguenti dati:
+\\Per l'inserimento e la configurazione della corretta rete nel proprio wallet Metamask è necessario recarsi sulla sezione ``Networks" e selezionare l'opzione ``Add Network". Successivamente inserire i seguenti dati:
 \begin{itemize}
 \item Network Name: \textbf{Matic Mainnet};
 \item New RPC Url: \textbf{https://rpc-mainnet.maticvigil.com/};
@@ -46,7 +46,7 @@ Una volta inseriti i dati e aggiunto il network, ricordare di selezionarlo.
 \subsubsection{Collegamento a Shop Chain}
 Una volta inserito correttamente il network è necessario collegare il proprio wallet metamask a Shop Chain. Nella webapp di Shop Chain, se non si ha già collegato in precedenza il proprio wallet:
 \begin {itemize}
-\item selezionare "Connect Wallet" all'apertura del pop-up (Fig. 1);
+\item selezionare ``Connect Wallet" all'apertura del pop-up (Fig. 1);
 \item approvare il collegamento direttamente dall'estensione di Metamask.
 \end{itemize}
 
@@ -90,12 +90,12 @@ Per ciascuna vendita l'e-commerce può scegliere se (Fig. 3 riquadro 2):
   \item \textbf{Accettare il pagamento:} l'e-commerce che decide di accettare il pagamento deve necessariamente seguire la procedura sotto riportata per permettere all'acquirente di sbloccare i fondi nel momento della ricezione del pacco.\\
   La procedura prevede di:
   \begin{itemize}
-    \item Selezionare l'opzione "Download QR";
+    \item Selezionare l'opzione ``Download QR";
     \item stampare il codice QR scaricato in formato .png;
     \item attaccare la stampa del codice QR sul pacco contenente l'oggetto acquistato prima di spedirlo.
   \end{itemize}
-  Una volta spedito il pacco è necessario aspettare la ricezione e lo sblocco fondi da parte dell'acquirente. Se il pacco non viene spedito l'acquirente riceverà il rimborso in DAI dopo 14 giorni dall'acquisto.\\
-  \item \textbf{Annullare il pagamento:} l'e-commerce che decide di annullare il pagamento deve selezionare l'opzione "Cancel transaction". L'acquirente viene rimborsato in DAI con l'esatto importo pagato al momento dell'acquisto.
+  Una volta spedito il pacco è necessario aspettare la ricezione e lo sblocco fondi da parte dell'acquirente. Se il pacco non viene spedito, l'acquirente riceverà il rimborso in DAI dopo 14 giorni dall'acquisto.\\
+  \item \textbf{Annullare il pagamento:} l'e-commerce che decide di annullare il pagamento deve selezionare l'opzione ``Cancel transaction". L'acquirente viene rimborsato in DAI con l'esatto importo pagato al momento dell'acquisto.
 \end{itemize}
 \FloatBarrier
 \begin{figure}[!h]
