--- a/docs/esterni/manuale_acquirente/manuale_acquirente.tex
+++ b/docs/esterni/manuale_acquirente/manuale_acquirente.tex
@@ -13,7 +13,8 @@
 \setdescrizione{
 Manuale acquirente.
 }
-\addversione{0.1.0}{13/04/2022}{Federico Marchi}{G. Cocco, M. Galvagni}{Stesura iniziale}
+\addversione{0.1.0}{13/04/2022}{Federico Marchi}{Matteo Galvagni}{Stesura iniziale}
+\addversione{1.0.0}{07/05/2022}{Federico Marchi}{Elia Scandaletti}{Stesura finale}
 
 \begin{document}
 
@@ -26,13 +27,14 @@ Manuale acquirente.
 Attraverso l'utilizzo della blockchain \textit{Polygon}, Shop Chain fornisce un sistema decentralizzato per il pagamento di prodotti in MATIC. Utilizzando Shop Chain è possibile effettuare una qualsiasi attività di compravendita in maniera sicura per entrambi gli attori dello scambio. L'acquirente che desidera acquistare un prodotto da un venditore in un e-commerce potrà effettuare il suo pagamento in MATIC, ovvero il token nativo della blockchain \textit{Polygon}. Il venditore non può disporre immediatamente del saldo ricevuto poiché sarà bloccato fino alla ricezione del pacco, momento nel quale l'acquirente può sbloccare i fondi attraverso la scannerizzazione di un codice QR presente sulla scatola.\\
 Il presente documento ha la funzione di descrivere in dettaglio la procedura da seguire per l'acquirente per il corretto acquisto di un item e successivo ritiro e sblocco fondi attraverso il servizio Shop Chain.
 
+\newpage
 \section{Configurazione wallet}
 \subsection{Wallet Metamask}
 Per poter effettuare il pagamento sarà necessario l'utilizzo di un wallet Metamask. Visitare \href{https://www.metamask.io}{metamask.io} per maggiori informazioni.
 \subsubsection{Configurazione}
 \label{sec:network}
-Se il network Polygon non è gia stato inserito nel proprio wallet Metamask, procedere con la lettura del seguente paragrafo.
-Per l'inserimento e la configurazione del network Polygon nel proprio wallet Metamask è necessario utilizzare i seguenti dati:
+Il wallet Metamask imposta il network di Ethereum come rete predefinita, Shop Chain invece utilizza il network di Polygon. Se il network Polygon non è gia stato inserito nel proprio wallet Metamask, procedere con la lettura del seguente paragrafo.
+\\Per l'inserimento e la configurazione della corretta rete nel proprio wallet Metamask è necessario recarsi sulla sezione ``Networks" e selezionare l'opzione ``Add Network". Successivamente inserire i seguenti dati:
 \begin{itemize}
 \item Network Name: \textbf{Matic Mainnet};
 \item New RPC Url: \textbf{https://rpc-mainnet.maticvigil.com/};
@@ -40,13 +42,13 @@ Per l'inserimento e la configurazione del network Polygon nel proprio wallet Met
 \item Currency Symbol: \textbf{MATIC};
 \item Block Explorer URL: \textbf{https://explorer.matic.network/}.
 \end{itemize}
-Una volta inseriti i dati e aggiunto il network, selezionare il network prima di procedere con il pagamento.
+Una volta inseriti i dati e aggiunto il network, ricordare di selezionarlo prima di procedere con il pagamento.
 
 \subsubsection{Collegamento a Shop Chain}
 Per poter eseguire il pagamento è necessario collegare il proprio wallet Metamask a Shop Chain. Una volta reindirizzati sulla landing page di Shop Chain, se non si ha già collegato in precedenza il proprio wallet:
 \begin {itemize}
-\item selezionare "Connect Wallet" all'apertura del pop-up (Fig. 1);
-\item approvare il collegamento dal proprio wallet Metamask.
+\item selezionare ``Connect Wallet" all'apertura del pop-up (Fig. 1);
+\item approvare il collegamento direttamente dall'estensione Metamask.
 \end{itemize}
 
 \FloatBarrier
@@ -66,31 +68,36 @@ Per effettuare il pagamento sarà necessario detenere nel proprio wallet Metamas
 \item \href{https://app.sushi.com/}{SushiSwap};
 \item \href{https://polygon.curve.fi/}{Curve}.
 \end{itemize}
-Una volta verificato di possedere una sufficiente quantità di MATIC si può procedere col pagamento. É possibile verificare prima del pagamento l'ammontare in dollari e l'address del venditore (Fig. 2). Infine per concludere il pagamento:
+Una volta che si viene reindirizzati alla landing page e che si ha verificato di possedere una sufficiente quantità di MATIC si può procedere col pagamento. \`E possibile verificare prima del pagamento l'ammontare in dollari e l'address del venditore (Fig. 2). Infine per concludere il pagamento:
 \begin{itemize}
-\item selezionare "Confirm" (Fig. 2);
+\item selezionare ``Confirm" (Fig. 2);
 \item confermare la transazione su Metamask.
 \end{itemize}
-
-Dovrà essere pagata anche un piccola somma per coprire i costi di transazione sul network \textit{Polygon}; questa è visualizzabile direttamente da Metamask prima di confermare la transazione.
+\mbox{}\\
+Dovrà essere pagata anche un piccola somma per coprire i costi di transazione sul network \textit{Polygon}; questa è visualizzabile direttamente da Metamask prima di confermare la transazione.\\
 \FloatBarrier
 \begin{figure}[!h]
 \centering
-\includegraphics[width=0.5\linewidth]{img/oggetto_in_vendita.png}
+\includegraphics[width=0.7\linewidth]{img/oggetto_in_vendita.png}
 \caption{Acquisto di un prodotto.}
 \end{figure}
 \FloatBarrier
-Inoltre attraverso la sezione "Outgoing" posta nel menù in alto a destra (Fig. 3) sarà possibile visualizzare l'insieme di pagamenti effettuati con Shop Chain attraverso il wallet collegato.
+
+\newpage
+\section{Visualizzazione e gestione acquisti}
+La web app di Shop Chain permette di visualizzare tutte le transazioni d'acquisto eseguite da un determinato wallet.\\
+Per poter visualizzare tutti gli acquisti recarsi dunque nella sezione ``Outgoing" posta nel menù in alto a destra (Fig. 3). In questa sezione è possibile visualizzare l'insieme di pagamenti effettuati con Shop Chain, il prezzo di ciascuno, la data d'acquisto e lo stato attuale della transazione.\\
 \FloatBarrier
 \begin{figure}[!h]
 \centering
-\includegraphics[width=0.8\linewidth]{img/visualizzazione_ordini.png}
+\includegraphics[width=0.9
+\linewidth]{img/outgoing.png}
 \caption{Sezione Outgoing per visualizzazione pagamenti.}
 \end{figure}
 \FloatBarrier
 
 \subsection{Visualizzazione acquisti}
-É possibile selezionare un acquisto per visualizzare i seguenti dati (Fig. 4 riquadro 1):
+Selezionando una transazione dalla lista è possibile visualizzarne i dettagli. I dati visualizzati sono i  seguenti (Fig. 4 riquadro 1):
 \begin{itemize}
 \item \textbf{Price}: indica il prezzo dell'oggetto acquistato;
 \item \textbf{From}: indica l'address del wallet dal quale è stato eseguito il pagamento;
@@ -106,14 +113,16 @@ Inoltre attraverso la sezione "Outgoing" posta nel menù in alto a destra (Fig. 
   \end{itemize}
 \end{itemize}
 \subsection{Gestione acquisti}
-Dopo 14 giorni dalla data di acquisto, se i fondi non sono stati sbloccati dall'acquirente attraverso la scannerizzazione del codice QR, avverrà il rimborso in DAI dell'esatto importo pagato. Nel caso in cui dopo 14 giorni l'acquirente non ha ancora ricevuto né il pacco né il rimborso, potrà annullare il pagamento manualmente selezionando l'opzione "Refund transaction" (Fig. 4 riquadro 2) e dunque ricevere il rimborso.
+Dopo 14 giorni dalla data di acquisto, se i fondi non sono stati sbloccati dall'acquirente attraverso la scannerizzazione del codice QR, avverrà il rimborso in DAI dell'esatto importo pagato. Nel caso in cui dopo 14 giorni l'acquirente non ha ancora ricevuto né il pacco né il rimborso, potrà annullare il pagamento manualmente selezionando l'opzione ``Refund transaction" (Fig. 4 riquadro 2) e dunque ricevere il rimborso.\\
 \FloatBarrier
 \begin{figure}[!h]
 \centering
-\includegraphics[width=0.8\linewidth]{img/transazione_acquirente.png}
+\includegraphics[width=0.7\linewidth]{img/transazione_acquirente.png}
 \caption{Visualizzazione e gestione acquisti.}
 \end{figure}
 \FloatBarrier
+
+\newpage
 \section{Sblocco dei fondi}
 Per tutelare l'acquirente, i MATIC utilizzati per il pagamento sono bloccati e il venditore non può utilizzarli fino al momento della ricezione del pacco. Al momento della consegna l'acquirente deve sbloccare i fondi.\\
 I seguenti paragrafi descrivono la procedura da seguire per concludere l'acquisto e sbloccare correttamente i fondi.
@@ -134,18 +143,18 @@ Prima di procedere con la conferma dell'ordine controllare di:
 \end{itemize}
 Una volta reindirizzati sulla landing page per la conferma dell'acquisto è possibile controllare i dati dell'ordine. Infine procedere come segue:
 \begin{itemize}
-\item selezionare "Confirm" (Fig. 4);
+\item selezionare ``Confirm" (Fig. 5);
 \item confermare la transazione di conferma su Metamask.
 \end{itemize}
 \FloatBarrier
 \begin{figure}[!h]
 \centering
-\includegraphics[width=0.5\linewidth]{img/conferma_ordine.png}
+\includegraphics[width=0.6\linewidth]{img/conferma_ordine.png}
 \caption{Interfaccia per la conferma dell'ordine.}
 \end{figure}
 \FloatBarrier
 \mbox{}\\
-Terminata la procedura i fondi saranno resi disponibili al venditore, lo stato dell'ordine diventa "Confirmed" e dunque il processo di vendita si è concluso correttamente.
+Terminata la procedura i fondi saranno resi disponibili al venditore, lo stato dell'ordine diventa ``Confirmed" e dunque il processo di vendita si è concluso correttamente.
 \\ \\
 Grazie per aver utilizzato Shop Chain!
 
