Chiusura Sprint 7 PdP

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -78,10 +78,10 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \ganttbar[progress=100]{Sviluppo Server}{2022-02-26}{2022-03-29} \\
 \ganttbar[progress=100]{Sviluppo Script Python}{2022-02-26}{2022-03-29} \\
 \ganttbar[progress=100]{Sviluppo WebApp}{2022-02-26}{2022-03-29} \\
-\ganttgroup[progress=75]{CA}{2022-04-07}{2022-05-12} \\
+\ganttgroup[progress=100]{CA}{2022-04-07}{2022-05-12} \\
 \ganttbar[progress=100]{Manuale Installazione}{2022-03-30}{2022-05-12} \\
 \ganttbar[progress=100]{Completamento WebApp}{2022-04-14}{2022-05-04} \\
-\ganttbar[progress=0]{Validazione}{2022-05-04}{2022-05-11}
+\ganttbar[progress=100]{Validazione}{2022-05-04}{2022-05-11}
 \end{ganttchart}
 \captionof{figure}{Diagramma di Gantt del progetto}
 
@@ -95,62 +95,39 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
         \hline
         \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
         \hline
-        Responsabile    & 30 & 78  & 2340\\
+        Responsabile    & 30 & 82  & 2460\\
         \hline
-        Amministratore  & 20 & 85  & 1700\\
+        Amministratore  & 20 & 91  & 1820\\
         \hline
         Analista        & 25 & 101.5  & 2537.5 \\
         \hline
         Progettista     & 25 & 109  & 2725\\
         \hline
-        Programmatore   & 15 & 198.5  & 2977.5\\
+        Programmatore   & 15 & 216.5  & 3247.5\\
         \hline
-        Verificatore    & 15 & 67  & 1005 \\
+        Verificatore    & 15 & 95  & 1425 \\
         \hline
         \hline
-        \textbf{Totale} &    & 639 & 13285\\
+        \textbf{Totale} &    & 695 & 14215\\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
 \end{center}
 
 \subsection{Preventivo a finire}
-\begin{center}
-    \begin{tabularx}{\textwidth}{|X|X|X|X|}
-        \hline
-        \multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}\\
-        \hline
-        \hline
-        \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
-        \hline
-        Responsabile    & 30 & 5  & 150\\
-        \hline
-        Amministratore  & 20 & 6  & 120\\
-        \hline
-        Analista        & 25 & 2  & 50\\
-        \hline
-        Progettista     & 25 & 2  & 50\\
-        \hline
-        Programmatore   & 15 & 20  & 300\\
-        \hline
-        Verificatore    & 15 & 25  & 375\\
-        \hline
-        \hline
-        \textbf{Totale} &    & 60 & 1045\\
-        \hline
-    \end{tabularx}\\[8pt]
-    \mbox{}\\
-\end{center}
+Il progetto è da considerarsi terminato, per questo motivo non sono preventivate ulteriori ore.
+Il tempo necessario alle comunicazioni tra gruppo, proponente e committente è ritenuto trascurabile.
 
-\textbf{Data di fine prevista}: 12 Maggio 2022
+\textbf{Data di fine prevista}: 12 Maggio 2022 \\
+\textbf{Data di fine effettiva}: 12 Maggio 2022
 
 \subsection{Stato d'avanzamento corrente}
-La data di consegna è posticipata di due settimane rispetto al preventivo iniziale. Non si prevedono ulteriori posticipi. In quella data - o prima - verrà richiesto il colloquio CA.
-\\Con la richiesta di colloquio CA si prevede di venire a conoscenza dei contenuti della relativa presentazione. Non appena saranno resi noti si inizierà la preparazione per il colloquio.
-\\Il prodotto software è completo in tutte le sue parti. \`E ora in corso la fase di validazione con controllo di soddisfazione dei requisiti.
-\\I manuali utente sono completi. Il manuale sviluppatore è in conclusione.
-\\Sono in atto aggiornamenti alla documentazione, in linea con la valutazione PB del prof. Vardanega.
-\\La gestione di progetto procede senza intralci. Il WoW adottato a seguito delle problematiche del primo periodo ha dato i suoi frutti.
+La data di consegna è posticipata di due settimane rispetto al preventivo iniziale. Tale scadenza è stata rispettata. In quella data viene richiesto il colloquio CA. \\
+Con la richiesta di colloquio CA si prevede di venire a conoscenza dei contenuti della relativa presentazione. Non appena saranno resi noti si inizierà la preparazione per il colloquio. \\
+Il prodotto software è completo in tutte le sue parti. La validazione del prodotto è stata completata con successo. Non sono state rilevate criticità. \\
+I manuali sono completi. \\
+La documentazione è stata aggiornata in linea con la valutazione PB del prof. Vardanega. \\
+La gestione di progetto procede senza intralci. Il WoW adottato a seguito delle problematiche del primo periodo ha dato i suoi frutti.
 
 \section{Metodo di lavoro}
 Il metodo di lavoro fa uso del framework Scrum. Si farà inoltre uso della tecnica di Continuos Integration.\\
@@ -1174,6 +1151,65 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         È prevista una riunione con il proponente. Potrebbe non essere soddisfatto del lavoro svolto finora e potrebbe richiedere modifiche al prodotto. & Non sono previste misure di mitigazione da applicare in questo ciclo. Questo perché la mitigazione di questo rischio dev'essere una conseguenza del Way of Working.\\
         \hline
         Durante l'attività di validazione potrebbero emergere dei requisiti non rispettati o non completamente soddisfatti. & Non sono previste misure di mitigazione da applicare in questo ciclo. Questo perché la mitigazione di questo rischio dev'essere una conseguenza del Way of Working.\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\subsubsection{Resoconto}\mbox{}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|X|X|}
+        \hline
+        \multicolumn{4}{|c|}{\textbf{Ore effettive}}\\
+        \hline
+        \hline
+        \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
+        \hline
+        Responsabile    & 30 & 4 (-1)  & 120 (-30)\\
+        \hline
+        Amministratore  & 20 & 6  & 120\\
+        \hline
+        Analista        & 25 & 0 (-2)  & 0 (-50)\\
+        \hline
+        Progettista     & 25 & 0 (-2) & 0 (-50)\\
+        \hline
+        Programmatore   & 15 & 18 (-2)  & 270 (-30)\\
+        \hline
+        Verificatore    & 15 & 28 (+3)  & 420 (+45)\\
+        \hline
+        \hline
+        \textbf{Totale} &    & 56 (-4) & 930 (-115)\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Problematiche riscontrate}}\\
+        \hline
+        \hline
+        \textbf{Problema} & \textbf{Soluzione adottata}\\
+        \hline
+        Durante la presentazione al proponente è i pagamenti non sono andato a buon fine. & Si è deciso di individuare la causa in una riunione straordinaria a fine dell'incontro. La causa è stata individuata in un downtime dell'RPC della testnet impostato in MetaMask. Cambiando l'RPC si ovvia al problema. \\
+        \hline
+        Durante la riunione straordinaria, è emerso un problema che provoca occasionalmente il crash del server a causa di interruzioni alla connessione socket dal lato di Moralis. & Per ovviare a questi rari casi, poiché modificare l'architettura costerebbe troppo, si è optato per un riavvio automatico del server. \\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Nozioni apprese}}\\
+        \hline
+        \hline
+        \textbf{Nozione} & \textbf{Conseguenza sulla pianificazione}\\
+        \hline
+        Potrebbe capitare che ci siano imprevisti tecnici con la testnet durante la presentazione. & Bisogna avere più di una persona pronta ad esporre in caso una persona abbia problemi improvvisi. Bisogna avere pronte delle RPC di riserva in caso di downtime di quella in uso durante la presentazione. \\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
