--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -39,6 +39,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{2.11.1}{07/05/2022}{Matteo Galvagni}{Elia Scandaletti}{Correzione dopo revisione PB.}
 \addversione{2.12.0}{07/05/2022}{Alberto Nicoletti}{Elia Scandaletti}{Aggiunta analisi narrativa dello stato d'avanzamento.}
 \addversione{2.13.0}{08/05/2022}{Elia Scandaletti}{Andrea Volpe}{Aggiunto preventivo per ciclo 7.}
+\addversione{2.14.0}{11/05/2022}{Elia Scandaletti}{Giovanni Cocco}{Chiusura ciclo 7.}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
