--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -87,7 +87,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \captionof{figure}{Diagramma di Gantt del progetto}
 
 
-\subsection{Consuntivo attuale}
+\subsection{Consuntivo finale}
 \begin{center}
     \begin{tabularx}{\textwidth}{|X|X|X|X|}
         \hline
